[workspace]
resolver = "2"
members = ["examples/*"]

[package]
name = "taski"
version = "0.0.3"
edition = "2021"
authors = ["romnn <contact@romnn.com>"]
description = "async task DAG execution"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/taski"
repository = "https://github.com/romnn/taski"
categories = [
  "asynchronous",
  "concurrency",
]
keywords = [
  "async",
  "task",
  "scheduling",
  "dag",
  "execution"
]
exclude = [
  "graphs/",
  "examples/",
  "src/tests/"
]

[features]
default  = []
# default  = ["render"]
render = ["dep:rand", "dep:rand_chacha", "dep:plotters", "dep:palette", "dep:layout-rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
# downcast-trait = "0"
# lazy_static = "1"
thiserror = "1"
log = "0"
petgraph = { version = "0", features = ["graphmap", "stable_graph"] }
async-trait = "0"
futures = "0.3"
# tokio = { version = "1", features = ["full"] }
# tokio-stream = "0.1"
# futures-util = "0.3"
# async-stream = "0.3"
# rayon = "1"
# downcast-rs = "1"
# num_cpus = "1"
# by_address = "1"


# Optional: trace rendering
rand = { version = "0", optional = true }
rand_chacha = { version = "0", optional = true }
plotters = { version = "0.3", optional = true }
palette = { version = "0", optional = true }

# Optional: DAG rendering
layout-rs = { version = "0.1", optional = true }

[dev-dependencies]
color-eyre = "0"
itertools = "0"
env_logger = "0"
tokio = { version = "1", features = ["full"] }
# approx = "0.5"
# tempdir = "0.3"
# anyhow = "1"
# lazy_static = "1"
# criterion = "0"
