[package]
name = "download_and_convert_music"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0"

# async
tokio = { version = "1", features = ["full"] }
async-trait = "0"
futures = "0.3"
async-process = "1"

# downloading
reqwest = { version = "0", features = ["stream"] }
urlencoding = "2"
tempfile = "3"

taski = { path = "../../" , features = ["render"] }

[dev-dependencies]
pretty_assertions = "1"
