[package]
name = "download_and_convert_music_example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
color-eyre = "0"

# cli
clap = { version = "4", features = ["derive"] }

# async
tokio = { version = "1", features = ["full"] }
async-trait = "0"
futures = "0.3"
async-process = "2"

# downloading
reqwest = { version = "0", features = ["stream"] }
urlencoding = "2"
tempfile = "3"

taski = { path = "../../" , features = ["render"] }

[dev-dependencies]
pretty_assertions = "1"
